--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "firebase": "^7.24.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "ngx-doc-viewer": "^2.0.4",
     "rxjs": "~6.4.0",
+    "sweetalert2": "^11.0.18",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
