--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,10 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+              "node_modules/material-design-icons/iconfont/material-icons.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/custom.scss"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
