--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
+    "material-icons": "^1.10.2",
     "ngx-doc-viewer": "^2.0.4",
     "rxjs": "~6.4.0",
     "sweetalert2": "^11.0.18",
