--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
     "@popperjs/core": "^2.6.0",
+    "@swimlane/ngx-charts": "^12.1.0",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.3",
     "firebase": "^7.24.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
     "material-design-icons": "^3.0.1",
     "material-icons": "^1.10.2",
+    "ng2-charts": "^2.4.2",
     "ngx-doc-viewer": "^2.0.4",
     "rxjs": "~6.4.0",
     "sweetalert2": "^11.0.18",
