--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "material-icons": "^1.10.2",
     "ng2-charts": "^2.4.2",
     "ngx-doc-viewer": "^2.0.4",
+    "primeicons": "^3.0.0",
+    "primeng": "^11.4.0",
     "rxjs": "~6.4.0",
     "sweetalert2": "^11.0.18",
     "tslib": "^1.10.0",
