--- a/angular.json
+++ b/angular.json
@@ -21,11 +21,8 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
-              "src/assets",
-              {
-              "glob": "_redirects",
-             "input": "src",
-              "output": "/"}
+              "src/assets"
+              
             ],
             "styles": [
               "node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
