--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "proyect",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,43 +12,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.13",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.2.13",
-    "@angular/compiler": "~8.2.13",
-    "@angular/core": "~8.2.13",
-    "@angular/forms": "~8.2.13",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.2.13",
-    "@angular/platform-browser-dynamic": "~8.2.13",
-    "@angular/router": "~8.2.13",
-    "@popperjs/core": "^2.6.0",
+    "@angular/animations": "^12.2.14",
+    "@angular/cdk": "^12.2.13",
+    "@angular/common": "^12.2.14",
+    "@angular/compiler": "^12.2.14",
+    "@angular/core": "^12.2.14",
+    "@angular/forms": "^12.2.14",
+    "@angular/material": "^12.2.13",
+    "@angular/platform-browser": "^12.2.14",
+    "@angular/platform-browser-dynamic": "^12.2.14",
+    "@angular/router": "^12.2.14",
+    "@fortawesome/angular-fontawesome": "^0.9.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@popperjs/core": "^2.11.0",
     "@swimlane/ngx-charts": "^12.1.0",
+    "angular-datatables": "^13.0.1",
     "angularfire2": "^5.4.2",
-    "bootstrap": "^4.6.0",
-    "chart.js": "^2.9.3",
+    "bootstrap": "^4.6.1",
+    "bootstrap-table": "^1.19.1",
+    "chart.js": "^2.9.4",
+    "countdown": "^2.6.0",
+    "datatables.net": "^1.11.4",
+    "datatables.net-dt": "^1.11.4",
     "firebase": "^7.24.0",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.5.1",
+    "jquery": "^3.6.0",
     "material-design-icons": "^3.0.1",
-    "material-icons": "^1.10.2",
+    "material-icons": "^1.10.4",
     "ng2-charts": "^2.4.2",
-    "ngx-doc-viewer": "^2.0.4",
-    "primeicons": "^3.0.0",
-    "primeng": "^11.4.0",
+    "ngx-doc-viewer": "^2.0.5",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.2.3",
     "rxjs": "~6.4.0",
-    "sweetalert2": "^11.0.18",
+    "sweetalert2": "^11.3.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.17",
-    "@angular/cli": "~8.3.17",
-    "@angular/compiler-cli": "~8.2.13",
-    "@angular/language-service": "~8.2.13",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "~12.2.14",
+    "@angular/cli": "^12.2.14",
+    "@angular/compiler-cli": "^12.2.14",
+    "@angular/language-service": "^12.2.14",
+    "@types/datatables.net": "^1.10.21",
     "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
+    "@types/jasminewd2": "^2.0.10",
+    "@types/jquery": "^3.5.13",
+    "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,10 +67,10 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.7.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "~4.3.0"
   }
 }
