--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "chart.js": "^3.7.1",
     "datatables.net": "^1.11.4",
     "datatables.net-dt": "^1.11.4",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "firebase": "^7.24.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.6.0",
