--- a/angular.json
+++ b/angular.json
@@ -36,9 +36,9 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
-              "node_modules/datatables.net/js/jquery.dataTables.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+              "node_modules/datatables.net/js/jquery.dataTables.js"
               
             ]
           },
