--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@angular/compiler": "^12.2.14",
     "@angular/core": "^12.2.14",
     "@angular/forms": "^12.2.14",
+    "@angular/localize": "^12.2.14",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "^12.2.14",
     "@angular/platform-browser-dynamic": "^12.2.14",
     "@angular/router": "^12.2.14",
+    "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.0",
     "@swimlane/ngx-charts": "^12.1.0",
     "angular-datatables": "^13.0.1",
