--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "material-icons": "^1.10.4",
     "ng-angular-popup": "^0.1.2",
     "ng2-charts": "^3.0.8",
+    "ng2-slim-loading-bar": "^4.0.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.6.7",
     "sweetalert2": "^11.3.1",
     "tslib": "^1.10.0",
     "uuid": "^8.3.2",
